<resources>
    <string name="app_name">TriviaDrop</string>
    <string name="username_hint">Username</string>
    <string name="LoginTitle">TriviaDrop</string>
    <string name="password_hint">Password</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_button_text">Login</string>
    <string name="soloButtonText">Solo</string>
    <string name="email_hint">Email</string>
    <string name="SignUpTitle">SignUp</string>
    <string name="already_registered_try_login">  Already registered? Try login</string>
    <string name="try_signUp_text">  Don\'t have an account yet? try SignUp</string>
    <string name="logout">LOGOUT</string>
    <string name="display_name">Display name</string>
    <string name="choose_subject_title">Choose Subject</string>
    <string name="is_solo">isSolo</string>
    <string name="capitals">capitals</string>
    <string name="create_game">Practice Mode</string>
    <string name="game_intent_text">Game</string>
    <string name="questions">Questions</string>
    <string name="start_game">Start Game</string>
    <string name="choose_subject">choose subject</string>
    <string name="subject">Subject</string>
    <string name="DEFAULT_QUESTION_NUM">20</string>
    <string name="competitive_game_text">Competitive game</string>
    <string name="room_name">Room name</string>
    <string name="number_of_questions">Number of Questions:</string>
    <string name="scores_text">scores</string>
    <string name="correct_answers_text">correctAnswers</string>
    <string name="is_competitive_text">is_competitive</string>
    <string name="play_competitive">Competitive Mode</string>
    <string name="leaderboards">leaderboard</string>
    <string name="astronomy">astronomy</string>
    <string name="questions_limit">1 – 50</string>
    <string name="time_per_question">Seconds per Question:</string>
    <string name="time_per_question_limit">1 – 20</string>
    <string name="image_id">subject_image_id</string>
    <string name="history">history</string>
    <string name="generalKnowledge">general knowledge</string>
    <string name="harryPotter">harry potter</string>
    <string name="world_cup_title">world cup</string>
    <string name="home">Home</string>
    <string name="empty_leaderboard">-</string>
    <string name="custom_subject">Custom Subject</string>
</resources>