<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".signin.SignUpActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginTitle"
        android:textSize="60sp"
        android:textAlignment="center"
        android:layout_weight="5"
        />

    <ImageView
        android:id="@+id/signUpLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        app:srcCompat="@drawable/logo" />


    <EditText
        android:id="@+id/signUpEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18"
        android:hint="@string/email_hint"
         />

    <EditText
        android:id="@+id/displayNameEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:hint="@string/display_name" />

    <EditText
        android:id="@+id/signUpPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/signup_button_text" />

    <TextView
        android:id="@+id/switchToLoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/already_registered_try_login" />


</LinearLayout>