<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".CreateSoloRoomActivity">


    <EditText
        android:id="@+id/roomTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:ems="10"
        android:hint="@string/room_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/questionsNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:ems="10"
        android:textAlignment="center"
        android:text="@string/DEFAULT_QUESTION_NUM"
        android:inputType="numberSigned"
        android:hint="@string/number_of_questions"
        android:importantForAutofill="no" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:weightSum="100"
        android:orientation="vertical">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:checked="false"
            android:text="@string/competitive_game_text"
            tools:ignore="NestedWeights" />

    </LinearLayout>

    <Button
        android:id="@+id/chooseSubjectButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/choose_subject"
        />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/start_game" />

</LinearLayout>